--- a/spaces.html
+++ b/spaces.html
@@ -39,77 +39,81 @@
             </ul>
           </nav>
     </header>
-    <div class="img-container">
-        <img src="imgs/andrew-ruiz-348421.jpg" alt="bilde av man space" class="imgspcmann">
-    </div>
-    <div class="text-container">
-        <h1 class="info-text-front">Cosmology</h1>
+    <div class="gridbox5">
+        <div class="img-container">
+            <img src="imgs/andrew-ruiz-348421.jpg" alt="bilde av man space" class="imgspcmann">
+        </div>
+        <div class="text-container">
+            <h1 class="info-text-front">Cosmology</h1>
+            <p class="info-text1">
+                Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know about the universe around us. We’ll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the stars to travel by.
+            </p>
+        </div>
+        <div class="spcimg-container">
+            <img src="imgs/celso-405219.jpg" alt="bilde av månen" class="spaceimg">
+            <p class="info-text2">
+                Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, to the latest exploration of the planets in our solar system.
+            </p>
+            <img src="imgs/binoculars-2028304.svg" alt="bilde av som ser i teleskop" class="teleimg">
+            <hr>
+        </div>
+    <div class="img-container1">
+        <img src="imgs/mammoth-1257288_1920.jpg" alt="bilde av skjellet mammoth" class="mammothimg">
+        <p class="info-text-front">
+            Evolution
+        </p>
         <p class="info-text1">
-            Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know about the universe around us. We’ll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the stars to travel by.
+            For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here? Since Darwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world.
         </p>
-    </div>
-    <div class="spcimg-container">
-        <img src="imgs/celso-405219.jpg" alt="bilde av månen" class="spaceimg">
-        <p class="info-text2">
-            Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, to the latest exploration of the planets in our solar system.
+        <img src="imgs/skeleton-414543_1920.jpg" alt="bilde av skjelleter" class="skjelletimg">
+        <p class="info-text1">
+            Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.
         </p>
-        <img src="imgs/binoculars-2028304.svg" alt="bilde av som ser i teleskop" class="teleimg">
         <hr>
     </div>
-<div class="img-container1">
-    <img src="imgs/mammoth-1257288_1920.jpg" alt="bilde av skjellet mammoth" class="mammothimg">
-    <p class="info-text-front">
-        Evolution
-    </p>
-    <p class="info-text1">
-        For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here? Since Darwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world.
-    </p>
-    <img src="imgs/skeleton-414543_1920.jpg" alt="bilde av skjelleter" class="skjelletimg">
-    <p class="info-text1">
-        Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.
-    </p>
-    <hr>
-</div>
-<div class="img-container2">
-    <img src="imgs/heart-2607178_1920.jpg" alt="bilde av hjerte" class="biologyimg">
-    <p class="info-text-front">
-        Biology and Medicine
-    </p>
-    <p class="info-text1">
-        From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world. 
-    </p>
-    <img src="imgs/jesse-orrico-60373.jpg" alt="bilde av biology" class="biologyimg">
-    <p class="info-text1">
-        Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.
-    </p>
-    <p class="info-text1">
-        Many of our great medicinal discoveries have come not only from the lab, but also from observing animals in the wild. Often our fellow creatures have beat us to it.
-    </p>
-    <hr>
-</div>
-<div class="img-container2">
-    <img src="imgs/william-bout-264826.jpg" alt="bilde av ai" class="aiimg">
-    <p class="info-text-front">
-        Robotics and AI
-    </p>
-    <p class="info-text1">
-        The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot.
-    </p>
-    <hr>
-</div>
-<div class="img-container3">
-    <img src="imgs/genoa-956405_1920.jpg" alt="bilde av ai" class="ecoimg">
-    <p class="info-text-front">
-        Ecology
-    </p>
-    <p class="info-text1">
-        As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how to create a sustainable future not just for humans but for the whole planet.
-    </p>
-    <p class="info-text1">
-        In our ecology section of the museum, we unpack the dangers we currently face including global warming, extinction of species, and pollution. But we also focus on the positive ways we can all contribute to a brighter future.
-    </p>
-    <hr>
-</div> 
+    <div class="img-container2">
+        <img src="imgs/heart-2607178_1920.jpg" alt="bilde av hjerte" class="biologyimg">
+        <p class="info-text-front">
+            Biology and Medicine
+        </p>
+        <p class="info-text1">
+            From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world. 
+        </p>
+        <img src="imgs/jesse-orrico-60373.jpg" alt="bilde av biology" class="biologyimg">
+        <p class="info-text1">
+            Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.
+        </p>
+        <p class="info-text1">
+            Many of our great medicinal discoveries have come not only from the lab, but also from observing animals in the wild. Often our fellow creatures have beat us to it.
+        </p>
+        <hr>
+    </div>
+    <div class="img-container3">
+        <img src="imgs/william-bout-264826.jpg" alt="bilde av ai" class="aiimg">
+        <p class="info-text-front">
+            Robotics and AI
+        </p>
+        <p class="info-text1">
+            The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot.
+        </p>
+        <hr>
+    </div>
+        <img src="imgs/genoa-956405_1920.jpg" alt="bilde av ai" class="ecoimg">
+        <div class="text-box">
+            <p class="info-text-front">
+                Ecology
+            </p>
+            <p class="info-text1">
+                As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how to create a sustainable future not just for humans but for the whole planet.
+            </p>
+            <p class="info-text1">
+                In our ecology section of the museum, we unpack the dangers we currently face including global warming, extinction of species, and pollution. But we also focus on the positive ways we can all contribute to a brighter future.
+            </p>
+        <hr>
+    </div> 
+    </div>
+<br>
+<br>
 <footer>
     <div class="center">
         <div class="footer-container">
