--- a/support.html
+++ b/support.html
@@ -20,7 +20,7 @@
             </div>
             <input type="text" class="search-input" placeholder="Search...">
         </div>
-            <ul class="headerbox1">
+            <ul class="menu-bar">
                 <li><a href="index.html">Schools & preschools&nbsp;<i class="fa-solid fa-school"></i></a></li>
                 <li><a href="visit.html">Visit&nbsp; <i class="fa-solid fa-map"></i></a></li>
                 <li><a href="support.html">Contact information&nbsp;<i class="fa-solid fa-headset"></i></a></li>
