--- a/visit.html
+++ b/visit.html
@@ -119,7 +119,7 @@
                 <p class="checkbox-text">
                 <input type="checkbox"> i have read and approved the register declaration.</p>
             </div>
-            <hr id="hide">
+            <hr class="hide">
             <p class="title">
                 CSM
             </p>
@@ -152,7 +152,7 @@
                 Sunday 9:00 - 13:00
                 </p>
             </div>
-            <hr id="hide">
+            <hr class="hide">
             <div class="boxfooter">
                 <nav>
                     <ul class="footer-nav">
