--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <a id="readmorekid" class="read-more" href="kids.html" target="_blank">
         Read more
     </a>
-    <hr id="hide">
+    <hr class="hide">
     <p id="teachertext" class="text">For Teachers</p>
     <div id="student" class="imgbox">
         <img class="vrmanbox" src="imgs/billetto-editorial-334686.jpg" alt="img av en mann i vr">
@@ -77,7 +77,7 @@
     <a id="studentreadmore" class="read-more" href="teachers.html" target="_blank">
         Read more
     </a>
-    <hr id="hide">
+    <hr class="hide">
     <p id="restext" class="text">Researchers</p>
     <div id="researchers" class="imgbox">
         <img id="vrmann" class="vrmanbox" src="imgs/people-219985_1280.jpg" alt="img som ser i mikroskop">
@@ -142,7 +142,7 @@
                 <p class="checkbox-text">
                 <input type="checkbox"> i have read and approved the register declaration.</p>
             </div>
-            <hr id="hide">
+            <hr class="hide">
             <p class="title">
                 CSM
             </p>
@@ -175,7 +175,7 @@
                 Sunday 9:00 - 13:00
                 </p>
             </div>
-            <hr id="hide">
+            <hr class="hide">
             <div class="boxfooter">
                 <nav>
                     <ul class="footer-nav">
