--- a/kids.html
+++ b/kids.html
@@ -48,13 +48,13 @@
         </h1>
         <div class="kidreadbox">
             <img src="imgs/reading-2762010_1280.jpg" alt="img av et barn lese">
-            <p id="infotext1" class="info-text1">
+            <p id="#kid-info-text" class="info-text1">
                 You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.
             </p>
         </div>
       <div class="librarybox">
         <img src="imgs/library-1132573_1920.jpg" alt="img av bibliotek">
-        <p id="infotext1" class="info-text1">
+        <p id="#kid-info-text" class="info-text1">
             We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and experiment with our team of experts.  
         </p>
         <hr>
@@ -79,7 +79,7 @@
                 <p class="checkbox-text">
                 <input type="checkbox"> i have read and approved the register declaration.</p>
             </div>
-            <hr id="hide">
+            <hr class="hide">
             <p class="title">
                 CSM
             </p>
@@ -112,7 +112,7 @@
                 Sunday 9:00 - 13:00
                 </p>
             </div>
-            <hr id="hide">
+            <hr class="hide">
             <div class="boxfooter">
                 <nav>
                     <ul class="footer-nav">
