--- a/support.html
+++ b/support.html
@@ -82,7 +82,7 @@
                     <p class="checkbox-text">
                     <input type="checkbox"> i have read and approved the register declaration.</p>
                 </div>
-                <hr id="hide">
+                <hr class="hide">
                 <p class="title">
                     CSM
                 </p>
@@ -115,7 +115,7 @@
                     Sunday 9:00 - 13:00
                     </p>
                 </div>
-                <hr id="hide">
+                <hr class="hide">
                 <div class="boxfooter">
                     <nav>
                         <ul class="footer-nav">
