--- a/kids.html
+++ b/kids.html
@@ -54,7 +54,7 @@
         </div>
       <div class="librarybox">
         <img src="imgs/library-1132573_1920.jpg" alt="img av bibliotek">
-        <p id="#kid-info-text" class="info-text1">
+        <p id="#kid-info-text1" class="info-text1">
             We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and experiment with our team of experts.  
         </p>
         <hr>
