--- a/visit.html
+++ b/visit.html
@@ -64,16 +64,16 @@
         <p class="info-text1">Community Science Museum</p>
         <p class="open-text">10:00 AM - 16:00 AM</p>
         <p class="grey-text">Tuseday, Wednesday, Thursday</p>
-        <hr id="show">
+        <hr class="show">
         <p class="open-text">10:00 AM - 19:00 AM</p>
         <p class="grey-text">Friday</p>
-        <hr id="show">
+        <hr class="show">
         <p class="open-text">9:00 AM - 16:00 AM</p>
         <p class="grey-text">Saturday</p>
-        <hr id="show">
+        <hr class="show">
         <p class="open-text">9:00 AM - 13:00 AM</p>
         <p class="grey-text">Sunday</p>
-        <hr id="show">
+        <hr class="show">
         <p class="open-text">Closed</p>
         <p class="grey-text">Monday</p>
     </div>
