--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link type="text/css" rel="stylesheet" href="css/footer.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link type="text/css" rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
     <header class="headerbox">
@@ -39,7 +39,6 @@
             </ul>
           </nav>
     </header>
-    <div class="center-box">
         <div class="frontbox">
           <div class="space-box">
               <img src="imgs/celso-405219.jpg" alt="img av månen">
@@ -55,7 +54,6 @@
                   </div>
               </a>
           </div>
-    </div>
 </div>
 <div class="center-box1">
     <img class="imgbarn" src="imgs/learn.jpg" alt="img av et barn">
@@ -82,9 +80,6 @@
     <div id="researchers" class="imgbox">
         <img id="vrmann" class="vrmanbox" src="imgs/people-219985_1280.jpg" alt="img som ser i mikroskop">
     </div>
-    
-    <div class="spa"></div>
-    <div class="spa"></div>
     <a id="readmorerea" class="read-more" href="researchers.html" target="_blank">
         Read more
     </a>
