--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
 </head>
 <body>
     <header class="headerbox">
-        <img src="imgs/icon-1719742.svg" alt="img av logo CSM" class="logoimg1">
+        <a href="index.html">
+            <img src="imgs/icon-1719742.svg" alt="img av logo CSM" class="logoimg1">
+        </a>
         <div class="searchbox">
             <div class="search-button" tabindex="0"><i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <input type="text" class="search-input" placeholder="Search...">
         </div>
             <ul class="menu-bar">
-                <li><a href="index.html">Schools & preschools&nbsp;<i class="fa-solid fa-school"></i></a></li>
+                <li><a href="kids.html">Schools & preschools&nbsp;<i class="fa-solid fa-school"></i></a></li>
                 <li><a href="visit.html">Visit&nbsp; <i class="fa-solid fa-map"></i></a></li>
                 <li><a href="support.html">Contact information&nbsp;<i class="fa-solid fa-headset"></i></a></li>
-                <li><a href="about.html">More about CSM&nbsp;<i class="fa-solid fa-circle-info"></i></a></li>
+                <li><a href="news.html">More about CSM&nbsp;<i class="fa-solid fa-circle-info"></i></a></li>
             </ul>
         <label for="hamburger-menu">
             <i id="menu" class="fas fa-bars"></i>
@@ -32,55 +34,50 @@
           <input type="checkbox" id="hamburger-menu">
           <nav class="hamburger">
             <ul>
-              <li><a href="index.html">Schools & preschools</a></li>
+              <li><a href="kids.html">Schools & preschools</a></li>
               <li><a href="visit.html">Visit</a></li>
               <li><a href="support.html">Contact information</a></li>
-              <li><a href="about.html">More about CSM</a></li>
+              <li><a href="news.html">More about CSM</a></li>
             </ul>
           </nav>
-    </header>
-        <div class="frontbox">
-          <div class="space-box">
-              <img src="imgs/celso-405219.jpg" alt="img av månen">
-          </div>
-          <div class="frontbox1">
-              <img src="imgs/samuel-zeller-158996.jpg" alt="img av mann i vrheadset">
-              <img src="imgs/luke-ellis-craven-400722.jpg" alt="img av en gammel mann">
-              <a href="spaces.html">
-                  <div class="textbox">
-                      <p class="transfrom-text">Read more about what we have
-                          <i class="fa-solid fa-arrow-right"></i>
-                      </p>
-                  </div>
-              </a>
-          </div>
+</header>
+    <div class="front-box">
+            <img class="space-img" src="imgs/celso-405219.jpg" alt="img av månen">
+        <div class="front-box1">
+            <img src="imgs/samuel-zeller-158996.jpg" alt="img av mann i vrheadset">
+            <img src="imgs/luke-ellis-craven-400722.jpg" alt="img av en gammel mann">
+            <a href="spaces.html">
+                <div class="text-box-read">
+                    <p class="transfrom-text">Read more about what we have
+                <i class="fa-solid fa-arrow-right"></i></p>
+            </div>
+        </a>
+    </div>
 </div>
-<div class="center-box1">
-    <img class="imgbarn" src="imgs/learn.jpg" alt="img av et barn">
-    <h1 id="kidtext" class="text">
+<div class="grid-box-main">
+    <img class="img-barn" src="imgs/learn.jpg" alt="img av et barn">
+    <h1 id="kid-text" class="text">
         For Kids
     </h1>
-    <div id="kidread" class="imgbox">
+    <div id="kid-box" class="img-box">
         <img class="kidreadbox" src="imgs/reading-2762010_1280.jpg" alt="img av barn som leser">
         <img class="kidreadbox" src="imgs/markus-spiske-197281.jpg" alt="img av leker">
     </div>
-    <a id="readmorekid" class="read-more" href="kids.html" target="_blank">
+    <a id="read-more-kid" class="read-more" href="kids.html" target="_blank">
         Read more
     </a>
     <hr class="hide">
-    <p id="teachertext" class="text">For Teachers</p>
-    <div id="student" class="imgbox">
-        <img class="vrmanbox" src="imgs/billetto-editorial-334686.jpg" alt="img av en mann i vr">
+    <p id="teacher-text" class="text">For Teachers</p>
+    <div id="student-box" class="img-box">
+        <img class="vr-mann-box" src="imgs/billetto-editorial-334686.jpg" alt="img av en mann i vr">
     </div>
-    <a id="studentreadmore" class="read-more" href="teachers.html" target="_blank">
+    <a id="read-more-student" class="read-more" href="teachers.html" target="_blank">
         Read more
     </a>
     <hr class="hide">
-    <p id="restext" class="text">Researchers</p>
-    <div id="researchers" class="imgbox">
-        <img id="vrmann" class="vrmanbox" src="imgs/people-219985_1280.jpg" alt="img som ser i mikroskop">
-    </div>
-    <a id="readmorerea" class="read-more" href="researchers.html" target="_blank">
+    <p id="researchers-text" class="text">Researchers</p>
+        <img class="mikroskop-mann" src="imgs/people-219985_1280.jpg" alt="img mann som ser i mikroskop">
+    <a id="read-more-rea" class="read-more" href="researchers.html" target="_blank">
         Read more
     </a>
 </div>
@@ -118,6 +115,8 @@
         </div>
     </div>
 </div>
+<br>
+<br>
 <footer>
     <div class="center">
         <div class="footer-container">
