--- a/spaces.html
+++ b/spaces.html
@@ -14,30 +14,32 @@
 </head>
 <body>
     <header class="headerbox">
-        <img src="imgs/icon-1719742.svg" alt="img av logo CSM" class="logoimg1">
+        <a href="index.html">
+            <img src="imgs/icon-1719742.svg" alt="img av logo CSM" class="logoimg1">
+        </a>
         <div class="searchbox">
             <div class="search-button" tabindex="0"><i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <input type="text" class="search-input" placeholder="Search...">
         </div>
-            <ul class="menu-bar">
-                <li><a href="index.html">Schools & preschools&nbsp;<i class="fa-solid fa-school"></i></a></li>
-              <li><a href="visit.html">Visit&nbsp; <i class="fa-solid fa-map"></i></a></li>
-              <li><a href="support.html">Contact information&nbsp;<i class="fa-solid fa-headset"></i></a></li>
-              <li><a href="about.html">More about CSM&nbsp;<i class="fa-solid fa-circle-info"></i></a></li>
-            </ul>
-        <label for="hamburger-menu">
-            <i id="menu" class="fas fa-bars"></i>
-          </label>
-          <input type="checkbox" id="hamburger-menu">
-          <nav class="hamburger">
-            <ul>
-              <li><a href="index.html">Schools & preschools</a></li>
-              <li><a href="visit.html">Visit</a></li>
-              <li><a href="support.html">Contact information</a></li>
-              <li><a href="about.html">More about CSM</a></li>
-            </ul>
-          </nav>
+        <ul class="menu-bar">
+            <li><a href="kids.html">Schools & preschools&nbsp;<i class="fa-solid fa-school"></i></a></li>
+            <li><a href="visit.html">Visit&nbsp; <i class="fa-solid fa-map"></i></a></li>
+            <li><a href="support.html">Contact information&nbsp;<i class="fa-solid fa-headset"></i></a></li>
+            <li><a href="news.html">More about CSM&nbsp;<i class="fa-solid fa-circle-info"></i></a></li>
+        </ul>
+    <label for="hamburger-menu">
+        <i id="menu" class="fas fa-bars"></i>
+      </label>
+      <input type="checkbox" id="hamburger-menu">
+      <nav class="hamburger">
+        <ul>
+          <li><a href="kids.html">Schools & preschools</a></li>
+          <li><a href="visit.html">Visit</a></li>
+          <li><a href="support.html">Contact information</a></li>
+          <li><a href="news.html">More about CSM</a></li>
+        </ul>
+      </nav>
     </header>
     <div class="gridbox5">
         <div class="img-container">
@@ -99,7 +101,7 @@
         <hr>
     </div>
         <img src="imgs/genoa-956405_1920.jpg" alt="bilde av ai" class="ecoimg">
-        <div class="text-box">
+        <div class="text-box-eco">
             <p class="info-text-front">
                 Ecology
             </p>
