--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="boxfooter">
                 <nav>
                     <ul class="footer-nav">
-                      <li><a class="title3" href="index.html">Schools & preschools</a></li>
+                      <li><a class="title3" href="kids.html">Schools & preschools</a></li>
                       <li><a class="title3" href="visit.html">Visit</a></li>
                       <li><a class="title3" href="support.html">Contact information</a></li>
                       <li><a class="title3" href="news.html">More about CSM</a></li>
