--- a/support.html
+++ b/support.html
@@ -42,7 +42,7 @@
       </nav>
     </header>
     <div class="gridbox">
-        <img src="imgs/toa-heftiba-412579.jpg" alt="img av musemum over" class="imgmuseum">
+        <img src="imgs/toa-heftiba-412579.jpg" alt="img av musemum over" class="img-museum">
         <div class="container-text">
             <h1 class="info-text-news">
                 GET INVOLVED
@@ -60,7 +60,7 @@
         <p id="text5" class="info-text1">A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.</p>
         <p id="text6" class="info-text1">You can help volunteer in a number of different spheres. Please contact us if you’d like to find out more about how you can get involved.</p>
         <hr>
-        <img src="imgs/exhibition-1863344_1920.jpg" alt="inside bilde museum" class="imgexo">
+        <img src="imgs/exhibition-1863344_1920.jpg" alt="inside bilde museum" class="img-exo">
         <p id="text7" class="info-text">Internships</p>
         <p id="text8" class="info-text1">Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.</p>
         <p id="text9" class="info-text1">You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.</p>
@@ -121,7 +121,7 @@
                 <div class="boxfooter">
                     <nav>
                         <ul class="footer-nav">
-                          <li><a class="title3" href="index.html">Schools & preschools</a></li>
+                          <li><a class="title3" href="kids.html">Schools & preschools</a></li>
                           <li><a class="title3" href="visit.html">Visit</a></li>
                           <li><a class="title3" href="support.html">Contact information</a></li>
                           <li><a class="title3" href="news.html">More about CSM</a></li>
