--- a/visit.html
+++ b/visit.html
@@ -42,7 +42,7 @@
       </nav>
     </header>
     <div class="gridbox">
-        <img src="imgs/mavis-cw-164128.jpg" alt="img insiden av museum" class="imgmuseum">
+        <img src="imgs/mavis-cw-164128.jpg" alt="img insiden av museum" class="img-museum">
         <div class="container-text">
             <h1 class="info-text-news">
                 VISIT
@@ -158,7 +158,7 @@
             <div class="boxfooter">
                 <nav>
                     <ul class="footer-nav">
-                      <li><a class="title3" href="index.html">Schools & preschools</a></li>
+                      <li><a class="title3" href="kids.html">Schools & preschools</a></li>
                       <li><a class="title3" href="visit.html">Visit</a></li>
                       <li><a class="title3" href="support.html">Contact information</a></li>
                       <li><a class="title3" href="news.html">More about CSM</a></li>
