--- a/researchers.html
+++ b/researchers.html
@@ -42,11 +42,11 @@
       </nav>
     </header>
     <div class="gridbox3">
-        <img id="imgrea" src="imgs/people-219985_1280.jpg" alt="img av en researcher" class="imgrea">
+        <img id="imgrea" src="imgs/people-219985_1280.jpg" alt="img av en researcher" class="img-rea">
         <h1 id="reatext" class="info-text">
             Are you looking to get involved with our team of researchers and academics? 
         </h1>
-        <img id="imgrea1" src="imgs/scientific-2040795_1280.jpg" alt="bilde av en lab" class="imgrea">
+        <img id="imgrea1" src="imgs/scientific-2040795_1280.jpg" alt="bilde av en lab" class="img-rea">
         <p id="reatext1" class="info-text1">
             Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country.  
         </p>
@@ -110,7 +110,7 @@
                 <div class="boxfooter">
                     <nav>
                         <ul class="footer-nav">
-                          <li><a class="title3" href="index.html">Schools & preschools</a></li>
+                          <li><a class="title3" href="kids.html">Schools & preschools</a></li>
                           <li><a class="title3" href="visit.html">Visit</a></li>
                           <li><a class="title3" href="support.html">Contact information</a></li>
                           <li><a class="title3" href="news.html">More about CSM</a></li>
