--- a/spaces.html
+++ b/spaces.html
@@ -43,7 +43,7 @@
     </header>
     <div class="gridbox5">
         <div class="img-container">
-            <img src="imgs/andrew-ruiz-348421.jpg" alt="bilde av man space" class="imgspcmann">
+            <img src="imgs/andrew-ruiz-348421.jpg" alt="bilde av man space" class="img-spc-mann">
         </div>
         <div class="text-container">
             <h1 class="info-text-front">Cosmology</h1>
@@ -67,21 +67,21 @@
         <p class="info-text1">
             For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here? Since Darwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world.
         </p>
-        <img src="imgs/skeleton-414543_1920.jpg" alt="bilde av skjelleter" class="skjelletimg">
+        <img src="imgs/skeleton-414543_1920.jpg" alt="bilde av skjelleter" class="skjellet-img">
         <p class="info-text1">
             Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.
         </p>
         <hr>
     </div>
     <div class="img-container2">
-        <img src="imgs/heart-2607178_1920.jpg" alt="bilde av hjerte" class="biologyimg">
+        <img src="imgs/heart-2607178_1920.jpg" alt="bilde av hjerte" class="biology-img">
         <p class="info-text-front">
             Biology and Medicine
         </p>
         <p class="info-text1">
             From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world. 
         </p>
-        <img src="imgs/jesse-orrico-60373.jpg" alt="bilde av biology" class="biologyimg">
+        <img src="imgs/jesse-orrico-60373.jpg" alt="bilde av biology" class="biology-img">
         <p class="info-text1">
             Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.
         </p>
@@ -91,7 +91,7 @@
         <hr>
     </div>
     <div class="img-container3">
-        <img src="imgs/william-bout-264826.jpg" alt="bilde av ai" class="aiimg">
+        <img src="imgs/william-bout-264826.jpg" alt="bilde av ai" class="ai-img">
         <p class="info-text-front">
             Robotics and AI
         </p>
@@ -100,7 +100,7 @@
         </p>
         <hr>
     </div>
-        <img src="imgs/genoa-956405_1920.jpg" alt="bilde av ai" class="ecoimg">
+        <img src="imgs/genoa-956405_1920.jpg" alt="bilde av ai" class="eco-img">
         <div class="text-box-eco">
             <p class="info-text-front">
                 Ecology
@@ -172,7 +172,7 @@
             <div class="boxfooter">
                 <nav>
                     <ul class="footer-nav">
-                      <li><a class="title3" href="index.html">Schools & preschools</a></li>
+                      <li><a class="title3" href="kids.html">Schools & preschools</a></li>
                       <li><a class="title3" href="visit.html">Visit</a></li>
                       <li><a class="title3" href="support.html">Contact information</a></li>
                       <li><a class="title3" href="news.html">More about CSM</a></li>
